<resources>
    <string name="app_name">SnapXEats</string>
    <string name="facebook_app_id">1899167340378268</string>
    <string name="fb_login_protocol_scheme">fb1899167340378268</string>
    <string name="google_api_key">AIzaSyBE60eBPlcvijgNGHK3X-Odd8zHJ2WksNk</string>
    <string name="instagram_login">Login with Instagram</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="ok">Ok</string>
    <string name="check_network">Please Check your internet connection !</string>
    <string name="fb_login_success">Facebook logged in successfully</string>
    <string name="btn_skip">Skip</string>
    <string name="insta_login_success">Instagram logged in successfully</string>
    <string name="insta_https">https</string>
    <string name="insta_url">api.instagram.com</string>
    <string name="insta_oauth">oauth</string>
    <string name="insta_authorize">authorize</string>
    <string name="insta_redirect_uri">redirect_uri</string>
    <string name="insta_response_type">response_type</string>
    <string name="insta_token">user_id</string>
    <string name="intent_rest_details">intent_rest_details</string>
    <string name="done">Done</string>
    <string name="select_cuisines">Select Cuisines</string>
    <string name="please_wait">Please wait…</string>
    <string name="select_location">Select Location</string>
    <string name="current_location">Current location</string>
    <string name="start_typing_your_location">Start typing your location</string>
    <string name="saved_addresses">SAVED ADDRESSES</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="permission_denied_msg">SnapXEats uses this permission to detect your current location
        and shows you great restaurants around you. Are you sure you want to deny this permission?</string>
    <string name="yes">YES</string>
    <string name="retry">RETRY</string>
    <string name="intent_google_dir">intent_google_dir</string>
    <string name="network_error">Check Internet connection</string>
    <string name="loading">Loading…</string>
    <string name="instagram">Cancel</string>
    <string name="insta_callback_url"><![CDATA[&response_type=token]]></string>
    <string name="insta_redirect_url"><![CDATA[&redirect_uri=]]></string>
    <string name="insta_client_id">\?client_id=</string>
    <string name="build">- Build -</string>
    <string name="app_version">vesrion</string>
    <string name="location_service_not_active">Location Services not Active</string>
    <string name="enable_gps">Please enable Location Services and GPS</string>
    <string name="location_permission_needed">Location permission needs to access this feature</string>
    <string name="permission_denied_permantantly">It looks like you have turned off permissions required
        for this feature. It can be enabled under Phone Settings >Apps >SnapXEats >Permissions</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="change_permissions">Change Permissions in Settings</string>
    <string name="using_gps">Using GPS</string>
    <string name="home">Home</string>
    <string name="address">4278 Wetster street, Edison, NJ</string>
    <string name="last_location">lastKnownLocation</string>
    <string name="isLocationPermissionGranted">isLocationPermissionGranted</string>
    <string name="isLocationPermissionDenied">isLocationPermissionDenied</string>
    <string name="title_activity_food_card">FoodCardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="snapxeats_email">snapxeats.test@synerzip.com</string>
    <string name="preference_name">SnapXEats.txt</string>
    <string name="cancel">Cancel</string>
    <string name="location">location</string>
    <string name="ratings">Ratings</string>
    <string name="three_stars">3 Stars</string>
    <string name="four_stars">4 Stars</string>
    <string name="five_stars">5 Stars</string>
    <string name="sort_by">Sort by</string>
    <string name="distance">Distance (miles)</string>
    <string name="distance_sort_by">Distance</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="cuisines">Cuisines</string>
    <string name="food">Food</string>
    <string name="apply">Apply</string>
    <string name="selected_location">selected_location</string>
    <string name="set_location">Location permission not set for this app</string>
    <string name="data_selectedCuisineList">selectedCuisineList</string>
    <string name="platform_facebook">facebook</string>
    <string name="platform_instagram">instagram</string>
    <string name="user_current_location">userCurrentLocation</string>
    <string name="pricing">Pricing</string>
    <string name="auto">Auto</string>
    <string name="something_went_wrong">Something went wrong, Please try again.</string>
    <string name="reset">Reset</string>
    <string name="cuisine_preference">Cuisine Preferences</string>
    <string name="food_preference">Food Preferences</string>
    <string name="save">Save</string>
    <string name="preference">Preferences</string>
    <string name="preference_save_message">You have made some changes to your preferences, You need to save them</string>
    <string name="preference_reset_message">Do you want to reset your preferences?</string>
    <string name="preference_apply_message">You have made some changes to your preferences, you need to apply to continue</string>
    <string name="delete_wishlist_message">Do you want to delete your selected wishlist item?</string>
    <string name="delete">Delete</string>
    <string name="wishlist_non_logged_in_user">Please login to check the Wishlist</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="discard">Discard</string>
    <string name="rootFoodPrefList">rootFoodPrefList</string>
    <string name="instaInfoIntent">instaInfoIntent</string>
    <string name="spinner_title">Open Now</string>
    <string name="check_specialties">Check Specialties</string>
    <string name="get_uber_ride">Get A Ride</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="user_token">user_token</string>
    <string name="user_id">user_id</string>
    <string name="book_uber_ride">Are you sure you want to book an Uber ride?</string>
    <string name="confirm_uber">Yes,confirm</string>
    <string name="not_now">Not Now</string>
    <string name="install_uber">You need to install the uber app from app store to book a ride. Do you want to install it now?</string>
    <string name="okay">Okay</string>
    <string name="rest_info_aminities">Amenities</string>
    <string name="intent_foodstackRestInfoId">foodstackRestInfoId</string>
    <string name="intent_foodstackRestDetailsId">foodstackRestDetailsId</string>
    <string name="away"> away</string>
    <string name="no_timings">No timings available</string>
    <string name="reward_points">Reward Points</string>
    <string name="instagramToken">instagramToken</string>
    <string name="rotation">rotation</string>
    <string name="translationX">translationX</string>
    <string name="translationY">translationY</string>
    <string name="open_now">Open Now</string>
    <string name="close_now">Closed Now</string>
    <string name="social_platform">social_platform</string>
    <string name="isFirstTimeUser">isFirstTimeUser</string>
    <string name="error">Error</string>
    <string name="nav_login">Log-In to SnapXEats and Earn Reward Points</string>
    <string name="zero">0</string>
    <string name="toolbar_rest_info">Restaurant Information</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="toolbar_rest_details">Restaurant Details</string>
    <string name="date_format_month">EEEE</string>
    <string name="wishlist">Wishlist</string>
    <string name="edit">Edit</string>
    <string name="intent_restaurant_id">restaurant_id</string>
    <string name="yyyy_MM_dd">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="dd_MMM_yyyy">dd MMM yyyy</string>
    <string name="date_rest_info">dd MMM yyyy</string>
    <string name="log_out">Logout</string>
    <string name="chek_in">Check In</string>
    <string name="food_journey">Food Journeys</string>
    <string name="rewards">Rewards</string>
    <string name="smart_photos">Smart Photos</string>
    <string name="snap_share">Snap-N-Share</string>
    <string name="intent_foodstack">intent_foodstack</string>
    <string name="intent_root_cuisine">intent_root_cuisine</string>
    <string name="within">Within</string>
    <string name="miles">miles</string>
    <string name="price_one">$</string>
    <string name="price_two">$$</string>
    <string name="price_three">$$$</string>
    <string name="price_four">$$$$</string>
    <string name="mi">mi</string>
    <string name="photo_taken">Photo taken on</string>
    <string name="select_restaurant_to_checkin">Select Restaurant to Check-In</string>
    <string name="check_in">Check-In</string>
    <string name="check_and_earn">Check In and Earn \n Rewards Points</string>
    <string name="whoops">Whoops!</string>
    <string name="no_restaurant_near_you">There is no \n restaurant near you</string>
    <string name="log_in">Log In</string>
    <string name="reward_type_check_in">restaurant_check_in</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="you_have_earned">You\'ve earned</string>
    <string name="Continue">Continue</string>
    <string name="from_the_menu">From the menu</string>
    <string name="check_in_and_earn">Check in and earn reward point</string>
    <string name="earn_reward_points">EARN 50 REWARD POINTS</string>
    <string name="share_photo_of_the_dish">Share photo of the dish</string>
    <string name="file_path">file_path</string>
    <string name="date_time_pattern">yyyyMMdd_HHmmss</string>
    <string name="file_name_pattern">MMM dd yyyy HH:mm:ss.SSS zzz</string>
    <string name="img">IMG_</string>
    <string name="txt_review_audio">AUD_</string>
    <string name="image_extension">.jpg</string>
    <string name="take_photo">Take photo</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="toolbar_snap_share">Snap-N-Share</string>
    <string name="hint_txt_review">Write what you feel about dish</string>
    <string name="rate_ur_experience">Rate Your Experience</string>
    <string name="add_ur_review">Add Audio Review</string>
    <string name="record">Record</string>
    <string name="play_review">Audio Review</string>
    <string name="delete_feedback">Delete Review</string>
    <string name="review_continue">Continue</string>
    <string name="review_discard">Discard</string>
    <string name="msg_share_review">Do you want to add and share your review ?</string>
    <string name="share_another">Share another</string>
    <string name="post_share_success">Post successfully \n shared on facebook</string>
    <string name="post_success">successful</string>
    <string name="no_data_found">It seems you need to \n revise your preferences \n to get a better result</string>
    <string name="txt_share_later">Share Later</string>
    <string name="msg_login_dialog">The photo will not able to Shared unless you login into SnapXEats</string>
    <string name="download_success_msg">Photo has been saved \n successfully. You can check it \nunder <b>Smart Photo</b> section</string>
    <string name="successful">Successful</string>
    <string name="login_success">LogIn Success</string>
    <string name="login_success_msg">Congratulations, You have successfully logged in !</string>
</resources>