<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/common_dimens_30">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100"
        android:src="@drawable/ic_success_check" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_dimens_20"
        android:gravity="center"
        android:text="@string/post_success"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_22"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/common_dimens_20"
        android:text="@string/post_share_success"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/text_size_18" />

    <Button
        android:id="@+id/btn_share_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_record_btn"
        android:padding="@dimen/common_dimens_20"
        android:text="@string/share_another"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/txt_size_16" />

    <TextView
        android:id="@+id/txt_not_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_dimens_10"
        android:gravity="center"
        android:text="@string/not_now"
        android:textColor="@color/recent_searches_color"
        android:textSize="@dimen/txt_size_16" />
</LinearLayout>