<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_bun"
        android:layout_margin="@dimen/common_dimens_40"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whoops"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_20"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data_found"
        android:textSize="@dimen/text_size_12"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_dimens_10"
        android:layout_marginBottom="@dimen/dimens_40"/>

    <Button
        android:id="@+id/btn_set_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_selected"
        android:paddingLeft="@dimen/common_dimens_30"
        android:paddingRight="@dimen/common_dimens_30"
        android:text="@string/set_preferences"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/txt_select_cuisine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_cuisines"
        android:textSize="@dimen/text_size_16"
        android:gravity="center_horizontal"
        android:textColor="@color/text_color_primary"
        android:layout_marginTop="@dimen/common_dimens_15" />

</LinearLayout>
</android.support.constraint.ConstraintLayout>