<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_dimens_5"
            android:text="@string/log_out"
            android:textStyle="bold"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_16"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/common_dimens_5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_dimens_5"
            android:text="@string/logout_message"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dimens_20">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/common_dimens_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/screen_background_light_transparent"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="@dimen/common_dimens_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/screen_background_light_transparent"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>