<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="Roboto-Medium"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/common_dimens_200"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/common_dimens_30"
            android:src="@drawable/ic_snapx_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dimens_20"
            android:gravity="center"
            android:padding="@dimen/dimens_20"
            android:text="@string/msg_login_dialog"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/txt_size_14" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/facebook_login"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_fb_custom"
                android:layout_width="@dimen/dimen_241"
                android:layout_height="@dimen/dimen_44"
                android:layout_gravity="center"
                android:background="@drawable/border_dialog_login"
                android:text="@string/facebook_login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_size_16" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_instagram_login"
            android:layout_width="@dimen/dimen_241"
            android:layout_height="@dimen/dimen_44"
            android:layout_marginTop="@dimen/dimen_25"
            android:background="@drawable/border_dialog_login"
            android:text="@string/instagram_login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_size_16" />

        <TextView
            android:id="@+id/txt_login_share_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_dimens_30"
            android:layout_marginTop="@dimen/common_dimens_20"
            android:padding="@dimen/common_dimens_5"
            android:text="@string/txt_share_later"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/txt_size_14" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>