<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Downloaded layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/common_dimens_10">

        <ImageView
            android:layout_width="@dimen/dimens_60"
            android:layout_height="@dimen/dimens_60"
            android:layout_gravity="center_vertical|center"
            android:src="@drawable/ic_download_success"
            android:layout_marginTop="@dimen/common_dimens_30"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dimens_5"
            android:gravity="center_horizontal"
            android:text="@string/successful"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:theme="@style/TextViewStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_dimens_10"
            android:layout_marginTop="@dimen/common_dimens_10"
            android:gravity="center_horizontal"
            android:text="@string/download_success_msg"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_16" />
        <Button
            android:id="@+id/btn_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_button_selected"
            android:paddingLeft="@dimen/dimens_50dp"
            android:paddingRight="@dimen/dimens_50dp"
            android:text="@string/okay"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/common_dimens_30"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>